--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,24 @@
 @import "fonts";
 @import "typography";
 
-body {
-  background: $c-gray;
-}
+@import "utils/variables";
+@import "utils/mixins";
+
+@import "blocks/container";
+@import "blocks/grid";
+@import "blocks/logo";
+@import "blocks/icon";
+@import "blocks/button";
+@import "blocks/form-field";
+
+@import "blocks/page";
+@import "blocks/header";
+@import "blocks/menu";
+@import "blocks/top-actions";
+@import "blocks/about";
+@import "blocks/gallery";
+@import "blocks/place";
+@import "blocks/testimonuals";
+@import "blocks/contact-us";
+@import "blocks/footer";
+
